examples/test/testpolicy12846.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12846
  namespace: namespace361
spec:
  podSelector:
    matchLabels:
      key9: value26
      key4: value8
      key6: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value7
      podSelector:
        matchLabels:
          key20: value10
          key31: value11
          key19: value46
